...
            <!--                app:layout_constraintHorizontal_bias="0.044"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="parent"-->
            <!--                app:layout_constraintVertical_bias="0.869" />-->

            <Button
                android:id="@+id/btn_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="307dp"
                android:layout_marginTop="94dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="75dp"
                android:backgroundTint="#1A2561"
                android:text="Chat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_submit" />

            <Spinner
                android:id="@+id/spinner_family_members"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="468dp"
                android:layout_marginEnd="73dp"
                android:backgroundTint="#1A2561"
                android:text="Submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editText_amount"
                app:layout_constraintTop_toBottomOf="@+id/btn_show_popup" />

            <EditText
                android:id="@+id/editText_amount"
...
            <Spinner
                android:id="@+id/spinner_financial_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintEnd_toStartOf="@+id/btn_upload"
                app:layout_constraintTop_toBottomOf="@+id/pieChart" />

            <Button
                android:id="@+id/btn_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="162dp"
                android:layout_marginBottom="42dp"
                android:backgroundTint="#1A2561"
                android:text="Upload"
                app:layout_constraintBottom_toTopOf="@+id/btn_submit"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart"
                android:layout_width="match_parent"
...
