...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.174"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/startup_guest_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="142dp"
            android:layout_marginEnd="151dp"
            android:layout_marginBottom="188dp"
            android:backgroundTint="#1A2561"
            android:text="Guest"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.633"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
...
