...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#00FFFFFF"
        android:text="Settings" />

    <Button
        android:id="@+id/btn_recommend"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#00FFFFFF"
        android:text="Recommendations" />

    <Button
        android:id="@+id/btn_Family_Plan"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
...
